--- a/WD_PS1/index.html
+++ b/WD_PS1/index.html
@@ -4,30 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>Test page</title>
-    <style media="screen">
-        body {
-            margin: 0;
-        }
-
-        * {
-            box-sizing: border-box;
-        }
-
-        .column {
-            font-size: 4rem;
-            color: white;
-            font-weight: bold;
-            font-family: Helvetica;
-            text-align: center;
-            padding: 1rem;
-        }
-
-        .floats {
-            overflow: hidden;
-        }
-
-    </style>
 </head>
 <body>
 <section class="floats">
