--- a/WD_PS1/Task2/index.html
+++ b/WD_PS1/Task2/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Task2</title>
 </head>
 <body>
-
+<div class="header"> HEADER</div>
+<section class="content">
+    <div class="column"> MENU</div>
+    <div class="column"> CONTENT</div>
+</section>
+<div class="footer"> FOOTER</div>
 </body>
 </html>
