In Task 3 added files reset.css, style.css. In Task 3 started Header layout

--- a/WD_PS1/Task3/index.html
+++ b/WD_PS1/Task3/index.html
@@ -2,9 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+    <title>Task3</title>
 </head>
 <body>
+<header class="header">
+    <div id="headerInner">
+        <nav class="topMenuRight">
+            <ul>
+                <li><a href="#">PRODUCTS</a></li>
+                <li><a href="#">ABOUT US</a></li>
+                <li><a href="#">CONTACT US</a></li>
+            </ul>
+
+        </nav>
+    </div>
+    <section id="wrapper">
+
+    </section>
+</header>
 
 </body>
 </html>
