In Task 3 initial stage of layout

--- a/WD_PS1/Task3/index.html
+++ b/WD_PS1/Task3/index.html
@@ -8,20 +8,26 @@
 </head>
 <body>
 <header class="header">
-    <div id="headerInner">
-        <nav class="topMenuRight">
-            <ul>
-                <li><a href="#">PRODUCTS</a></li>
-                <li><a href="#">ABOUT US</a></li>
-                <li><a href="#">CONTACT US</a></li>
-            </ul>
+    <nav class="topMenuLeft">
+        <ul>
+            <a href="#"> N </a>
+            <a href="#"> ++ </a>
+        </ul>
+    </nav>
+    <nav class="topMenuRight">
+        <ul>
+            <li><a href="#">PRODUCTS</a></li>
+            <li><a href="#">ABOUT US</a></li>
+            <li><a href="#">CONTACT US</a></li>
+        </ul>
 
-        </nav>
+    </nav>
     </div>
-    <section id="wrapper">
-
-    </section>
 </header>
-
+<section class="wrapper">
+    <div class="contentFirst">  </div>
+    <div class="contentSecond">  </div>
+    <div class="footer"> 1 </div>
+</section>
 </body>
 </html>
