In Task 3 added feedback form , Awesome font connected

--- a/WD_PS1/Task3/index.html
+++ b/WD_PS1/Task3/index.html
@@ -4,30 +4,89 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="http://fortawesome.github.io/Font-Awesome/assets/font-awesome/css/font-awesome.css">
     <title>Task3</title>
 </head>
 <body>
-<header class="header">
-    <nav class="topMenuLeft">
-        <ul>
-            <a href="#"> N </a>
-            <a href="#"> ++ </a>
-        </ul>
-    </nav>
-    <nav class="topMenuRight">
-        <ul>
-            <li><a href="#">PRODUCTS</a></li>
-            <li><a href="#">ABOUT US</a></li>
-            <li><a href="#">CONTACT US</a></li>
-        </ul>
-
-    </nav>
+<div class="wrapper">
+    <div class="header">
+        <div class="column_left">
+            <span><a href="#"> <b> N</b>  </a></span>
+            <span><a href="#" style="color: #1abc9c"> <b> ++</b>  </a></span>
+        </div>
+        <div class="column_Right">
+            <nav class="topMenuRight">
+                <ul>
+                    <li><a href="#">CONTACT US</a></li>
+                    <li><a href="#">ABOUT US</a></li>
+                    <li><a href="#">PRODUCTS</a></li>
+                </ul>
+            </nav>
+        </div>
     </div>
-</header>
-<section class="wrapper">
-    <div class="contentFirst">  </div>
-    <div class="contentSecond">  </div>
-    <div class="footer"> 1 </div>
-</section>
+    <section class="content">
+        <div class="content_top">
+            <div class="column"></div>
+            <div class="column">
+
+                <span><a href="#"> Loren ipsum dolor sit amet, consectetur adipisicing elit. Pariatur vero
+            laboriosam adipisci dolores aut blanditiis neccesitatibus invertore, eius fuga porro recusandae
+            sint quis aliquam nam iure nihil beatae, atque quod!</a> </span>
+                <p></p>
+                <button class="buy_now" type="submit">Buy now!</button>
+
+            </div>
+        </div>
+        <div class="content_center">
+            <div class="column">
+                <i class="fa fa-code"></i>
+                <p></p>
+                <span><a href="#">
+                <b> Web development</b>
+                    <p></p>
+                    Loren ipsum dolor sit amet, consectetur adipisicing elit. Nobis nostrum
+                suscipit vel ipsa fugiat tempore molestiae error autem architecto eum, natus, voluplatum
+                eos commodi debitis, expedita pariatur recusandae temporibus voluplatibus!</a> </span>
+            </div>
+            <div class="column">
+                <i class="fa fa-android"></i>
+                <p></p>
+                <span><a href="#">
+                    <b> Mobile development</b>
+                    <p></p>
+                    Loren ipsum dolor sit amet, consectetur adipisicing elit. Nobis nostrum
+                suscipit vel ipsa fugiat tempore molestiae error autem architecto eum, natus, voluplatum
+                eos commodi debitis, expedita pariatur recusandae temporibus voluplatibus!</a> </span>
+            </div>
+            <div class="column">
+                <i class="fa fa-cloud"></i>
+                <p></p>
+                <span><a href="#">
+                    <b> Hightload</b>
+                    <p></p>
+                    Loren ipsum dolor sit amet, consectetur adipisicing elit. Nobis nostrum
+                suscipit vel ipsa fugiat tempore molestiae error autem architecto eum, natus, voluplatum
+                eos commodi debitis, expedita pariatur recusandae temporibus voluplatibus!</a> </span>
+            </div>
+        </div>
+        <div class="content_bottom">
+            <div class="form_question">
+                <h3><b> Contact us! </b></h3>
+                <div class="feedback_form">
+                    <input type="text" name="Type here your name, please">
+                    <p></p>
+                    <input type="text" name="Type here your email, please">
+                    <p></p>
+                    <input type="text" name="Type here your phone, please">
+                    <p></p>
+                    <input type="text" name="Ask your question">
+                    <p></p>
+                    <button class="button_submit" type="submit"> Send email!</button>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
 </body>
 </html>
