In Task 3 formatted content bottom

--- a/WD_PS1/Task3/index.html
+++ b/WD_PS1/Task3/index.html
@@ -29,7 +29,8 @@
         <div class="content_top">
             <div class="column"></div>
             <div class="column">
-
+                <span><a href="#"> Our awesome app is ready to use! </a> </span>
+                <p></p>
                 <span><a href="#"> Loren ipsum dolor sit amet, consectetur adipisicing elit. Pariatur vero
             laboriosam adipisci dolores aut blanditiis neccesitatibus invertore, eius fuga porro recusandae
             sint quis aliquam nam iure nihil beatae, atque quod!</a> </span>
@@ -74,13 +75,13 @@
             <div class="form_question">
                 <h3><b> Contact us! </b></h3>
                 <div class="feedback_form">
-                    <input type="text" name="Type here your name, please">
+                    <input type="text" name="name" placeholder="Type here your name, please" class="myInput">
                     <p></p>
-                    <input type="text" name="Type here your email, please">
+                    <input type="text" name="email" placeholder="Type here your email, please" class="myInput">
                     <p></p>
-                    <input type="text" name="Type here your phone, please">
+                    <input type="text" name="phone" placeholder="Type here your phone, please" class="myInput">
                     <p></p>
-                    <input type="text" name="Ask your question">
+                    <input type="text" name="question" placeholder="Ask your question" class="myQuestion">
                     <p></p>
                     <button class="button_submit" type="submit"> Send email!</button>
                 </div>
