--- a/WD_PS1/Task3/index.html
+++ b/WD_PS1/Task3/index.html
@@ -77,7 +77,9 @@
                 <div class="feedback_form">
                     <input type="text" name="name" placeholder="Type here your name, please" class="myInput">
                     <p></p>
-                    <input type="text" name="email" placeholder="Type here your email, please" class="myInput">
+                    <label>
+                        <input type="text" name="email" placeholder="Type here your email, please" class="myInput">
+                    </label>
                     <p></p>
                     <input type="text" name="phone" placeholder="Type here your phone, please" class="myInput">
                     <p></p>
