In Task 3 formatted font awesome, formatted content_center

--- a/WD_PS1/Task3/index.html
+++ b/WD_PS1/Task3/index.html
@@ -42,7 +42,7 @@
         </div>
         <div class="content_center">
             <div class="column">
-                <i class="fa fa-code"></i>
+                <i class="fa fa-code fa-5x"></i>
                 <p></p>
                 <span><a href="#" class="content_header">
                 <b> Web development</b>
@@ -54,7 +54,7 @@
                 eos commodi debitis, expedita pariatur recusandae temporibus voluplatibus!</a> </span>
             </div>
             <div class="column">
-                <i class="fa fa-android"></i>
+                <i class="fa fa-android fa-5x"></i>
                 <p></p>
                 <span><a href="#" class="content_header">
                     <b> Mobile development</b>
@@ -66,7 +66,7 @@
                 eos commodi debitis, expedita pariatur recusandae temporibus voluplatibus!</a> </span>
             </div>
             <div class="column">
-                <i class="fa fa-cloud"></i>
+                <i class="fa fa-cloud fa-5x"></i>
                 <p></p>
                 <span><a href="#" class="content_header">
                     <b> Hightload</b>
@@ -82,10 +82,18 @@
             <div class="form_question">
                 <h2><b> Contact us! </b></h2>
                 <form class="feedback_form">
-                    <input type="text" name="name" placeholder="Type here your name, please" class="myInput">
-                    <p><input type="text" name="email" placeholder="Type here your email, please" class="myInput"></p>
-                    <p><input type="text" name="phone" placeholder="Type here your phone, please" class="myInput"></p>
-                    <p><textarea name="question" placeholder="Ask your question" class="myQuestion"></textarea></p>
+                    <label>
+                        <input type="text" name="name" placeholder="Type here your name, please" class="myInput">
+                    </label>
+                    <p><label>
+                        <input type="text" name="email" placeholder="Type here your email, please" class="myInput">
+                    </label></p>
+                    <p><label>
+                        <input type="text" name="phone" placeholder="Type here your phone, please" class="myInput">
+                    </label></p>
+                    <p><label>
+                        <textarea name="question" placeholder="Ask your question" class="myQuestion"></textarea>
+                    </label></p>
                     <button class="button_submit" type="submit"> Send email!</button>
                 </form>
             </div>
