--- a/WD_PS1/Task3/index.html
+++ b/WD_PS1/Task3/index.html
@@ -27,17 +27,15 @@
     </div>
     <section class="content">
         <div class="content_top">
-            <div class="column"></div>
-            <img src="img/phone.png" alt="image of phone" class="image">
+            <div class="column"><img src="img/phone_for_task3.png" alt="image of phone" class="image"></div>
             <div class="column">
-                <span><a href="#"> <h2> <b> Our awesome app is ready to use!</b> </h2> </a> </span>
+                <span><a href="#" class="top_content_header"><b> Our awesome app is ready to use!</b></a> </span>
                 <p></p>
-                <span><a href="#"> Loren ipsum dolor sit amet, consectetur adipisicing elit. Pariatur vero
+                <span><a href="#" class="top_content"> Loren ipsum dolor sit amet, consectetur adipisicing elit. Pariatur vero
             laboriosam adipisci dolores aut blanditiis neccesitatibus invertore, eius fuga porro recusandae
             sint quis aliquam nam iure nihil beatae, atque quod!</a> </span>
                 <p></p>
                 <button class="buy_now" type="submit">Buy now!</button>
-
             </div>
         </div>
         <div class="content_center">
