Task 4 added index.html style.css reset.css and image

--- a/WD_PS1/Task4/index.html
+++ b/WD_PS1/Task4/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=EB+Garamond|Open+Sans&display=swap" rel="stylesheet">
+    <title>Task4</title>
 </head>
 <body>
-
+<div class="wrapper">
+    <div class="column"><img src="img/maxresdefault.jpg" alt="image of phone" class="image">
+    </div>
+    <div class="column">
+        <span><a href="#" class="name_of_game">game of trones</a> </span>
+    </div>
+</div>
 </body>
 </html>
