Task 3 move inline style to file style.css

--- a/WD_PS1/Task3/index.html
+++ b/WD_PS1/Task3/index.html
@@ -12,8 +12,8 @@
 <div class="wrapper">
     <div class="header">
         <div class="column_left">
-            <span><a href="#"> <b> N</b>  </a></span>
-            <span><a href="#" style="color: #1abc9c"> <b> ++</b>  </a></span>
+            <span><a href="#"> <b>N</b>  </a></span>
+            <span><a href="#"><strong><b>++</b></strong></a></span>
         </div>
         <div class="column_Right">
             <nav class="topMenuRight">
