Task 4 added font Game of Thrones

--- a/WD_PS1/Task4/index.html
+++ b/WD_PS1/Task4/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=EB+Garamond|Open+Sans&display=swap" rel="stylesheet">
+    <link href="fonts href=fonts/Game of Thrones.ttf">
     <title>Task4</title>
 </head>
 <body>
@@ -13,6 +14,12 @@
     </div>
     <div class="column">
         <span><a href="#" class="name_of_game">game of trones</a> </span>
+        <p></p>
+        <span><a href="#" class="second_string">You've succesfully joined the game
+        <p></p>Tell us more about yourself.</a> </span>
+        <p></p>
+        <span><a href="#" class="menu_of_game">Who are you?</a></span>
+        
     </div>
 </div>
 </body>
