Task 4 added text in right column

--- a/WD_PS1/Task4/index.html
+++ b/WD_PS1/Task4/index.html
@@ -19,7 +19,10 @@
         <p></p>Tell us more about yourself.</a> </span>
         <p></p>
         <span><a href="#" class="menu_of_game">Who are you?</a></span>
-        
+        <p></p>
+        <span><a href="#" class="menu_of_game">You Great House</a></span>
+        <p></p>
+        <span><a href="#" class="menu_of_game">You preferences, hobbies, wishes, etc.</a></span>
     </div>
 </div>
 </body>
