task 3 vertical alignment fixed in content_top. column_right

--- a/WD_PS1/Task3/index.html
+++ b/WD_PS1/Task3/index.html
@@ -27,14 +27,12 @@
     </div>
     <section class="content">
         <div class="content_top">
-            <div class="column"><img src="img/phone_for_task3.png" alt="image of phone" class="image"></div>
-            <div class="column">
-                <span><a href="#" class="top_content_header"><b> Our awesome app is ready to use!</b></a> </span>
-                <p></p>
-                <span><a href="#" class="top_content"> Loren ipsum dolor sit amet, consectetur adipisicing elit. Pariatur vero
+            <div class="column_left"><img src="img/phone_for_task3.png" alt="image of phone" class="image"></div>
+            <div class="column_right">
+                <div><span><p><a href="#" class="top_content_header"><b> Our awesome app is ready to use!</b></a></p></span></div>
+                <div><span><p><a href="#" class="top_content"> Loren ipsum dolor sit amet, consectetur adipisicing elit. Pariatur vero
             laboriosam adipisci dolores aut blanditiis neccesitatibus invertore, eius fuga porro recusandae
-            sint quis aliquam nam iure nihil beatae, atque quod!</a> </span>
-                <p></p>
+            sint quis aliquam nam iure nihil beatae, atque quod!</a></p></span></div>
                 <button class="buy_now" type="submit">Buy now!</button>
             </div>
         </div>
