task 3 added cursor:pointer; task 4 custom checkbox, task4 completed

--- a/WD_PS1/Task3/index.html
+++ b/WD_PS1/Task3/index.html
@@ -90,7 +90,7 @@
                     <p><label>
                         <textarea name="question" placeholder="Ask your question" class="myQuestion"></textarea>
                     </label></p>
-                    <button class="button_submit" type="submit"> Send email!</button>
+                    <input class="button_submit" type="submit"> Send email!</input>
                 </form>
             </div>
         </div>
