--- a/WD_PS1/Task4/index.html
+++ b/WD_PS1/Task4/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=EB+Garamond|Open+Sans&display=swap" rel="stylesheet">
-    <link href="fonts href=fonts/Game of Thrones.ttf">
+    <link href="fonts/Game of Thrones.ttf" rel="stylesheet">
     <title>Task4</title>
 </head>
 <body>
@@ -37,22 +37,26 @@
 <!--                </form>-->
         <form class="menu_of_game">
             <div class="sub_title"><p>You've succesfully joined the game</p>
-                <p>Tell us more about yourself.</a></p></div>
+                <p>Tell us more about yourself.</p></div>
             <div class="font_of_menu">Who are you?</div>
             <div class="font_of_submenu">Alpha-numeric username</div>
-            <div class="input"><input type="text" name="username" placeholder="arya" class="input_username"></input>
+            <div class="input"><input type="text" name="username" placeholder="arya" class="input_username">
             </div>
             <p></p>
             <div class="font_of_menu">You Great House</div>
-            <div class="select"><select type="text" name="user_house" class="select_house">
-                <option>Select House</option>
-            </select></div>
+            <div class="select"><label>
+                <select type="text" name="user_house" class="select_house">
+                    <option>Select House</option>
+                </select>
+            </label></div>
             <p></p>
             <div class="font_of_menu">You preferences, hobbies, wishes, etc.</div>
-            <div class="input"><input type="text" name="your_preferences" placeholder="I have a long TOKILL list..."
-                                      class="input_username"></input>
+            <div class="input"><label>
+                <input type="text" name="your_preferences" placeholder="I have a long TOKILL list..."
+                                          class="input_username"/>
+            </label>
             </div>
-            <input type="submit" class="save" value="Save"></input>
+            <input type="submit" class="save" value="Save"/>
         </form>
     </div>
 </div>
