--- a/WD_PS2/Task1/index.html
+++ b/WD_PS2/Task1/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Task1</title>
 </head>
 <body>
