--- a/WD_PS2/Task1/index.html
+++ b/WD_PS2/Task1/index.html
@@ -7,6 +7,14 @@
     <title>Task1</title>
 </head>
 <body>
+<div class="container">
+    <h1 class="title">sum of numbers</h1>
+    <h3 class="title_of_input">enter the first number</h3>
+    <input type="number" name="first_number" placeholder="enter the first number" class="my_input">
+    <h3 class="title_of_input">enter the second number</h3>
+    <input type="number" name="second_number" placeholder="enter the second number" class="my_input">
+    <h2 class="answer">the sum of numbers that end in 2,3, and 7</h2>
 
+</div>
 </body>
 </html>
