WD_PS2 added directory js and calc.js in WD_PS2 Task1 added input (button), and formatted page

--- a/WD_PS2/Task1/index.html
+++ b/WD_PS2/Task1/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/calc.js"></script>
     <title>Task1</title>
 </head>
 <body>
@@ -14,7 +15,8 @@
     <h3 class="title_of_input">enter the second number</h3>
     <input type="number" name="second_number" placeholder="enter the second number" class="my_input">
     <h2 class="answer">the sum of numbers that end in 2,3, and 7</h2>
-
+    <input class="button_calculate" type="submit" value="Calculate!">
+    <output name="answer" class="result"></output>
 </div>
 </body>
 </html>
