--- a/WD_PS2/Task5/index.html
+++ b/WD_PS2/Task5/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/calc.js"></script>
+    <title>Task5</title>
 </head>
 <body>
 
