wd_ps2 forms are created i the task1-task6

--- a/WD_PS2/Task4/index.html
+++ b/WD_PS2/Task4/index.html
@@ -8,6 +8,12 @@
     <title>Task4</title>
 </head>
 <body>
+<div class="container">
+    <h1 class="title">Chessboard</h1>
+    <h3 class="title_of_input">enter the size of the chessboard in the format 8x8</h3>
+    <input type="number" name="chessboard_size" placeholder="enter the size of the chessboard" class="my_input">
+    <input class="button_bild" type="submit" value="Bild Chessboard!">
 
+</div>
 </body>
 </html>
