--- a/WD_PS2/Task5/index.html
+++ b/WD_PS2/Task5/index.html
@@ -8,6 +8,10 @@
     <title>Task5</title>
 </head>
 <body>
-
+<div class="container">
+    <h1 class="title">Links and IP-adress</h1>
+    <h3 class="title_of_input">enter links and IP-adreses </h3>
+    <textarea name="link_and_ip" placeholder="enter links and IP-adreses" class="link_and_ip"></textarea>
+</div>
 </body>
 </html>
