--- a/WD_PS2/Task3/index.html
+++ b/WD_PS2/Task3/index.html
@@ -8,6 +8,15 @@
     <title>Task3</title>
 </head>
 <body>
-
+<div class="container">
+    <h1 class="title">time calculation</h1>
+    <h3 class="title_of_input">enter first time in format hh:mm:ss</h3>
+    <input type="number" name="first_time" placeholder="enter first time in format hh:mm:ss" class="my_input">
+    <h3 class="title_of_input">enter second time in format hh:mm:ss</h3>
+    <input type="number" name="second_time" placeholder="enter second time in format hh:mm:ss" class="my_input">
+    <h2 class="answer">time passed between two dates</h2>
+    <input class="button_calculate" type="submit" value="Calculate!">
+    <output name="answer" class="result"></output>
+</div>
 </body>
 </html>
