wd_ps1 ask3 error correction

--- a/WD_PS1/Task3/index.html
+++ b/WD_PS1/Task3/index.html
@@ -12,8 +12,7 @@
 <div class="wrapper">
     <div class="header">
         <div class="column_left">
-            <span><a href="#"> <b>N</b>  </a></span>
-            <span><a href="#"><strong><b>++</b></strong></a></span>
+            <span><b>N</b><strong>++</strong></span>
         </div>
         <div class="column_Right">
             <nav class="topMenuRight">
@@ -27,7 +26,8 @@
     </div>
     <section class="content">
         <div class="content_top">
-            <div class="column_left"><img src="img/phone_for_task3.png" alt="image of phone" class="image"></div>
+            <div class="column_left">
+                <img src="img/phone_for_task3.png" alt="image of phone" class="image"></div>
             <div class="column_right">
                 <div><span><p><a href="#"
                                  class="top_content_header"><b> Our awesome app is ready to use!</b></a></p></span>
@@ -80,19 +80,11 @@
             <div class="form_question">
                 <h2><b> Contact us! </b></h2>
                 <form class="feedback_form">
-                    <label>
-                        <input type="text" name="name" placeholder="Type here your name, please" class="myInput">
-                    </label>
-                    <p><label>
-                        <input type="text" name="email" placeholder="Type here your email, please" class="myInput">
-                    </label></p>
-                    <p><label>
-                        <input type="text" name="phone" placeholder="Type here your phone, please" class="myInput">
-                    </label></p>
-                    <p><label>
-                        <textarea name="question" placeholder="Ask your question" class="myQuestion"></textarea>
-                    </label></p>
-                    <input class="button_submit" type="submit" value="Send email!">
+                    <input type="text" name="name" placeholder="Type here your name, please" class="myInput">
+                    <br><input type="text" name="email" placeholder="Type here your email, please" class="myInput">
+                    <br><input type="text" name="phone" placeholder="Type here your phone, please" class="myInput">
+                    <br><textarea name="question" placeholder="Ask your question" class="myQuestion"></textarea>
+                    <br><input class="button_submit" type="submit" value="Send email!">
                 </form>
             </div>
         </div>
