--- a/WD_PS2/Task1/index.html
+++ b/WD_PS2/Task1/index.html
@@ -16,7 +16,7 @@
     <input type="number" name="second_number" placeholder="enter the second number" class="my_input">
     <h2 class="answer">the sum of numbers that end in 2,3, and 7</h2>
     <input class="button_calculate" type="submit" value="Calculate!">
-    <output name="answer" class="result"></output>
+    <p class="summ_of_numbers"></p>
 </div>
 </body>
 </html>
