WD_PS2 task1 completed

--- a/WD_PS2/Task1/index.html
+++ b/WD_PS2/Task1/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/calc.js"></script>
+
     <title>Task1</title>
 </head>
 <body>
 <div class="container">
     <h1 class="title">sum of numbers</h1>
     <h3 class="title_of_input">enter the first number</h3>
-    <input type="number" name="first_number" placeholder="enter the first number" class="my_input">
+    <input type="number" name="first_number" placeholder="first number" class="my_input">
     <h3 class="title_of_input">enter the second number</h3>
-    <input type="number" name="second_number" placeholder="enter the second number" class="my_input">
-    <h2 class="answer">the sum of numbers that end in 2,3, and 7</h2>
+    <input type="number" name="second_number" placeholder="second number" class="my_input">
     <input class="button_calculate" type="submit" value="Calculate!">
-    <p class="summ_of_numbers"></p>
+    <h2 class="answer">the sum of numbers that end in 2,3, and 7</h2>
+    <p class="result"></p>
 </div>
+<script src="js/calc.js"></script>
 </body>
 </html>
