WD_PS2 task1 completed

--- a/WD_PS2/Task1/index.html
+++ b/WD_PS2/Task1/index.html
@@ -10,9 +10,9 @@
 <body>
 <div class="container">
     <h1 class="title">sum of numbers</h1>
-    <h3 class="title_of_input">enter the first number</h3>
+    <h3 class="title_of_input">enter the first integer number</h3>
     <input type="number" name="first_number" placeholder="first number" class="my_input">
-    <h3 class="title_of_input">enter the second number</h3>
+    <h3 class="title_of_input">enter the second integer number</h3>
     <input type="number" name="second_number" placeholder="second number" class="my_input">
     <input class="button_calculate" type="submit" value="Calculate!">
     <h2 class="answer">the sum of numbers that end in 2,3, and 7</h2>
