WD_PS2 task 4 is completed

--- a/WD_PS2/Task4/index.html
+++ b/WD_PS2/Task4/index.html
@@ -11,10 +11,10 @@
 <div class="container">
     <h1 class="title">Chessboard</h1>
     <h3 class="title_of_input">enter the size of the chessboard in the format 8x8</h3>
-    <input type="number" name="chessboard_size" placeholder="enter the size of the chessboard" class="my_input">
+    <input type="text" name="chessboard_size" placeholder="enter the size of the chessboard" class="my_input">
     <input class="button_bild" type="submit" value="Bild Chessboard!">
-
+    <canvas class="chessboard"></canvas>
 </div>
-<script src="js/calc.js"></script>
+<script src="js/chessboard.js"></script>
 </body>
 </html>
