WD_PS2 task 5 in progress

--- a/WD_PS2/Task5/index.html
+++ b/WD_PS2/Task5/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
 <div class="container">
-    <h1 class="title">Links and IP-adress</h1>
-    <h3 class="title_of_input">enter links and IP-adreses </h3>
+    <h1 class="title">LINKS AND IP-ADDRESSES</h1>
+    <h3 class="title_of_input">Enter links and IP-addresses </h3>
     <textarea name="link_and_ip" placeholder="enter links and IP-adreses" class="link_and_ip"></textarea>
+    <p class="result"></p>
 </div>
-<script src="js/calc.js"></script>
+<script src="js/checkText.js"></script>
 </body>
 </html>
