--- a/WD_PS2/Task6/index.html
+++ b/WD_PS2/Task6/index.html
@@ -9,12 +9,13 @@
 <body>
 <div class="container">
     <h1 class="title">Text and regular</h1>
-    <h3 class="title_of_input">enter text </h3>
+    <h3 class="title_of_input">Enter text </h3>
     <textarea name="text_for_checked" placeholder="enter text for checked" class="text_for_checked"></textarea>
-    <h3 class="title_of_input">enter text or regular</h3>
+    <h3 class="title_of_input">Enter text or regular</h3>
     <input type="text" name="text_or_regular" placeholder="enter text or regular" class="my_input">
-    <input type="submit" class="button_calculate" value="check text">
+    <input type="submit" class="button_check" value="check text">
+    <p class="result"> <mark class="mark"> </mark> </p>
 </div>
-<script src="js/calc.js"></script>
+<script src="js/checkText.js"></script>
 </body>
 </html>
