--- a/WD_PS2/Task6/index.html
+++ b/WD_PS2/Task6/index.html
@@ -10,10 +10,10 @@
 <div class="container">
     <h1 class="title">Text and regular</h1>
     <h3 class="title_of_input">Enter text </h3>
-    <textarea name="text_for_checked" placeholder="enter text for checked" class="text_for_checked"></textarea>
+    <textarea class="text_for_checked" name="text_for_checked" placeholder="enter text for checked"></textarea>
     <h3 class="title_of_input">Enter text or regular</h3>
-    <input type="text" name="text_or_regular" placeholder="enter text or regular" class="my_input">
-    <input type="submit" class="button_check" value="check text">
+    <input class="my_input" name="text_or_regular" placeholder="enter text or regular" type="text">
+    <input class="button_check" type="submit" value="check text">
     <p class="result"> <mark class="mark"> </mark> </p>
 </div>
 <script src="js/checkText.js"></script>
