WD_PS1 task 3 and GOT fixed errors

--- a/WD_PS1/Task3/index.html
+++ b/WD_PS1/Task3/index.html
@@ -41,11 +41,9 @@
         <div class="content_center">
             <div class="column">
                 <i class="fa fa-code fa-5x"></i>
-                <p></p>
-                <span><a href="#" class="content_header">
+                <p><span><a href="#" class="content_header"></p>
                 <b> Web development</b>
-                    <p></p>
-                    </a> </span>
+                <p></a> </span></p>
                 <span><a href="#" class="column_content">
                     Loren ipsum dolor sit amet, consectetur adipisicing elit. Nobis nostrum
                 suscipit vel ipsa fugiat tempore molestiae error autem architecto eum, natus, voluplatum
@@ -53,11 +51,9 @@
             </div>
             <div class="column">
                 <i class="fa fa-android fa-5x"></i>
-                <p></p>
-                <span><a href="#" class="content_header">
-                    <b> Mobile development</b>
-                    <p></p>
-                </a></span>
+                <p><span><a href="#" class="content_header"></p>
+                <b> Mobile development</b>
+                <p> </a></span></p>
                 <span><a href="#" class="column_content">
                     Loren ipsum dolor sit amet, consectetur adipisicing elit. Nobis nostrum
                 suscipit vel ipsa fugiat tempore molestiae error autem architecto eum, natus, voluplatum
@@ -65,11 +61,9 @@
             </div>
             <div class="column">
                 <i class="fa fa-cloud fa-5x"></i>
-                <p></p>
-                <span><a href="#" class="content_header">
-                    <b> Hightload</b>
-                    <p></p>
-                    </a></span>
+                <p><span><a href="#" class="content_header"></p>
+                <b> Hightload</b>
+                <p></a></span></p>
                 <span><a href="#" class="column_content">
                     Loren ipsum dolor sit amet, consectetur adipisicing elit. Nobis nostrum
                 suscipit vel ipsa fugiat tempore molestiae error autem architecto eum, natus, voluplatum
