--- a/GoT/index.html
+++ b/GoT/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=EB+Garamond|Open+Sans&display=swap" rel="stylesheet">
-    <title>Task4</title>
+    <title>game of trones</title>
 </head>
 <body>
 <div class="wrapper">
