WD_PS1 GOT, task3 fixed errors

--- a/WD_PS1/Task3/index.html
+++ b/WD_PS1/Task3/index.html
@@ -17,15 +17,15 @@
         <div class="column_Right">
             <nav class="topMenuRight">
                 <ul>
-                    <li><a href="#">CONTACT US</a></li>
-                    <li><a href="#">ABOUT US</a></li>
-                    <li><a href="#">PRODUCTS</a></li>
+                    <li><a href="#" title="tab1">CONTACT US</a></li>
+                    <li><a href="#" title="tab2">ABOUT US</a></li>
+                    <li><a href="#" title="tab3">PRODUCTS</a></li>
                 </ul>
             </nav>
         </div>
     </div>
     <section class="content">
-        <div class="content_top">
+        <div class="content_top" id="tab1">
             <div class="column_left">
                 <img src="img/phone_for_task3.png" alt="image of phone" class="image"></div>
             <div class="column_right">
@@ -38,7 +38,7 @@
                 <button class="buy_now" type="submit">Buy now!</button>
             </div>
         </div>
-        <div class="content_center">
+        <div class="content_center" id="tab2">
             <div class="column">
                 <i class="fa fa-code fa-5x"></i>
                 <p><span><a href="#" class="content_header"></p>
@@ -70,7 +70,7 @@
                 eos commodi debitis, expedita pariatur recusandae temporibus voluplatibus!</a> </span>
             </div>
         </div>
-        <div class="content_bottom">
+        <div class="content_bottom" id="tab3">
             <div class="form_question">
                 <h2><b> Contact us! </b></h2>
                 <form class="feedback_form">
